--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,10 +166,10 @@ if(WI4MPI_GENERATOR)
   find_package(Python3 COMPONENTS Interpreter REQUIRED)
   set(PYTHONPATH "${CMAKE_SOURCE_DIR}/lib:$ENV{PYTHONPATH}")
   message(STATUS "Updated PYTHONPATH: ${PYTHONPATH}")
-  set(dir_gen_c_interface "${CMAKE_SOURCE_DIR}/interface/gen")
-  set(dir_gen_c_preload "${CMAKE_SOURCE_DIR}/preload/gen")
-  set(dir_gen_interface "${CMAKE_SOURCE_DIR}/interface/header")
-  set(dir_gen_preload "${CMAKE_SOURCE_DIR}/preload/header")
+  set(dir_gen_c_interface "${CMAKE_SOURCE_DIR}/src/interface/gen")
+  set(dir_gen_c_preload "${CMAKE_SOURCE_DIR}/src/preload/gen")
+  set(dir_gen_interface "${CMAKE_SOURCE_DIR}/src/interface/header")
+  set(dir_gen_preload "${CMAKE_SOURCE_DIR}/src/preload/header")
   message(STATUS "Running header and code generator with arguments")
   message(STATUS "--interface_header_dir=${dir_gen_interface}")
   message(STATUS "--preload_header_dir=${dir_gen_preload}")
