--- a/lib/etc/code/fortran/jsons/mappers.json
+++ b/lib/etc/code/fortran/jsons/mappers.json
@@ -1,4 +1,11 @@
 {
+  "indx_mapper":{
+    "local_alloc": 1,
+     "a2r":"int_ptr_conv_a2r",
+    "type":"int ",
+    "r2a":"indx_r2a",
+    "debug_type":"%p"
+    },
   "const_buffer_mapper": {
     "local_alloc": 0,
     "a2r": "buffer_a2r",
