Remove generated files from repo
They will be generated inside the build directory.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,10 +148,10 @@ if(WI4MPI_GENERATOR)
   find_package(Python3 COMPONENTS Interpreter REQUIRED)
   set(PYTHONPATH "${CMAKE_SOURCE_DIR}/lib:$ENV{PYTHONPATH}")
   message(STATUS "Updated PYTHONPATH: ${PYTHONPATH}")
-  set(dir_gen_c_interface "${CMAKE_SOURCE_DIR}/src/interface/gen")
-  set(dir_gen_c_preload "${CMAKE_SOURCE_DIR}/src/preload/gen")
-  set(dir_gen_interface "${CMAKE_SOURCE_DIR}/src/interface/header")
-  set(dir_gen_preload "${CMAKE_SOURCE_DIR}/src/preload/header")
+  set(dir_gen_c_interface "${CMAKE_BINARY_DIR}/src/interface/gen")
+  set(dir_gen_c_preload "${CMAKE_BINARY_DIR}/src/preload/gen")
+  set(dir_gen_interface "${CMAKE_BINARY_DIR}/src/interface/header")
+  set(dir_gen_preload "${CMAKE_BINARY_DIR}/src/preload/header")
   message(STATUS "Running header and code generator with arguments")
   message(STATUS "--interface_header_dir=${dir_gen_interface}")
   message(STATUS "--preload_header_dir=${dir_gen_preload}")
@@ -183,8 +183,10 @@ if(WI4MPI_GENERATOR)
         "Generator failed."
     )
   endif()
+  set(WI4MPI_GENDIR "${CMAKE_BINARY_DIR}/src")
 else()
     message(STATUS "Header and code generator is disabled. Set WI4MPI_GENERATOR to ON to activate it.")
+  set(WI4MPI_GENDIR "${CMAKE_SOURCE_DIR}/build/src")
 endif()
 
 #Setting wi4mpi.cfg
