[feature](CMakeLists.txt): enable the generator option '--mpi_norm'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,7 @@ option(WI4MPI_GENERATOR "Enable generation of sources (headers and code)" OFF)
 set(WI4MPI_GENERATOR_OPENMPI_VERSION "1.8.8" CACHE STRING "Version number of OpenMPI")
 set(WI4MPI_GENERATOR_INTELMPI_VERSION "20.0.0" CACHE STRING "Version number of IntelMPI")
 set(WI4MPI_GENERATOR_MPICH_VERSION "3.1.2" CACHE STRING "Version number of MPICH")
+set(WI4MPI_GENERATOR_MPI_NORM "3.1" CACHE STRING "Version number of MPI norm to use")
 
 #The Rpath Strikes Back
 set(CMAKE_SKIP_RPATH TRUE)
@@ -159,9 +160,11 @@ if(WI4MPI_GENERATOR)
   message(STATUS "--openmpi_version=${WI4MPI_GENERATOR_OPENMPI_VERSION}")
   message(STATUS "--intelmpi_version=${WI4MPI_GENERATOR_INTELMPI_VERSION}")
   message(STATUS "--mpich_version=${WI4MPI_GENERATOR_MPICH_VERSION}")
+  message(STATUS "--mpi_norm=${WI4MPI_GENERATOR_MPI_NORM}")
   message(STATUS "Option: set WI4MPI_GENERATOR_OPENMPI_VERSION to an OpenMPI available version: 1.8.8 2.1.6 4.1.6 5.0.3")
   message(STATUS "Option: set WI4MPI_GENERATOR_INTELMPI_VERSION to an IntelMPI available version: 20.0.0 24.0.0")
   message(STATUS "Option: set WI4MPI_GENERATOR_MPICH_VERSION to an MPICH available version: 3.1.2 3.4.3 4.2.0")
+  message(STATUS "Option: set WI4MPI_GENERATOR_MPI_NORM to an available version: 1.0, 1.1, 1.2, 2.0, 2.1, 2.2, 3.0, 3.1, 4.0"
   execute_process(
       COMMAND python3 ${CMAKE_SOURCE_DIR}/lib/generator.py
                 --interface_header_dir="${dir_gen_interface}"
@@ -171,6 +174,7 @@ if(WI4MPI_GENERATOR)
                 --openmpi_version="${WI4MPI_GENERATOR_OPENMPI_VERSION}"
                 --intelmpi_version="${WI4MPI_GENERATOR_INTELMPI_VERSION}"
                 --mpich_version="${WI4MPI_GENERATOR_MPICH_VERSION}"
+                --mpi_norm="${WI4MPI_GENERATOR_MPI_NORM}"
       RESULT_VARIABLE is_generator_ok
   )
   if(NOT "${is_generator_ok}" STREQUAL "0")
