--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,25 @@ cmake_minimum_required(VERSION 3.1.0)
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.17")
 # Specifies the logging level used by the message() command.
 # The valid log levels are ERROR, WARNING, NOTICE, STATUS (default), VERBOSE, DEBUG, or TRACE.
-set(CMAKE_MESSAGE_LOG_LEVEL WARNING CACHE STRING "Specifies the logging level used by the message() command.")
+set(CMAKE_MESSAGE_LOG_LEVEL WARNING CACHE STRING "Specifies logging level used by message() command (Default: WARNING)")
 endif()
 
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.13")
 # Remove all progress messages regarding rules: example "[ x%] Built C object ..."
-set(CMAKE_RULE_MESSAGES OFF CACHE STRING "Remove all progress messages regarding rules.")
+set(CMAKE_RULE_MESSAGES OFF CACHE STRING "Remove all progress messages about rules (Defaykt: OFF)")
 else()
 set(RULE_MESSAGES OFF)
 endif()
 
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.4")
 # Remove all progress messages regarding targets: example "[ x%] Built target ..."
-set(CMAKE_TARGET_MESSAGES OFF CACHE STRING "Remove all progress messages regarding targets.")
+set(CMAKE_TARGET_MESSAGES OFF CACHE STRING "Remove all progress messages about targets (Default: OFF)")
 endif()
 
 # NEVER: Removes all progress messages regarding installed files
 # LAZY: Removes all progress messages regarding updated installed files
 # ALWAYS: Displays all progress messages regarding installed files
-set(CMAKE_INSTALL_MESSAGE NEVER CACHE STRING "Manage progres messages regarding installed files. Values are: NEVER, LAZY, ALWAYS")
+set(CMAKE_INSTALL_MESSAGE NEVER CACHE STRING "Manage progress messages about installed files (NEVER, LAZY, ALWAYS; default: NEVER)")
 
 if(POLICY CMP0054)
     cmake_policy(SET CMP0054 NEW)
@@ -46,13 +46,13 @@ set(CMAKE_MODULE_PATH
    )
 
 option(WI4MPI_DEBUG "Add debug printing in the wrapped calls")
-option(WI4MPI_JIT "Use JIT compilation for user-provided stuff (required gcc in the PATH at run time")
+option(WI4MPI_JIT "Use JIT compilation for user-provided stuff (requires gcc in the PATH at runtime")
 option(WI4MPI_TIMEOUT "Activate timeout")
-option(WI4MPI_GENERATOR "Enable generation of sources (headers and code)" OFF)
-set(WI4MPI_GENERATOR_OPENMPI_VERSION "4.1.6" CACHE STRING "Version number of OpenMPI")
-set(WI4MPI_GENERATOR_INTELMPI_VERSION "20.0.0" CACHE STRING "Version number of IntelMPI")
-set(WI4MPI_GENERATOR_MPICH_VERSION "4.2.0" CACHE STRING "Version number of MPICH")
-set(WI4MPI_GENERATOR_MPI_NORM "3.1" CACHE STRING "Version number of MPI norm to use")
+option(WI4MPI_GENERATOR "Enable sources generation (headers and code)" OFF)
+set(WI4MPI_GENERATOR_OPENMPI_VERSION "4.1.6" CACHE STRING "Open MPI version")
+set(WI4MPI_GENERATOR_INTELMPI_VERSION "20.0.0" CACHE STRING "Intel MPI version")
+set(WI4MPI_GENERATOR_MPICH_VERSION "4.2.0" CACHE STRING "MPICH version")
+set(WI4MPI_GENERATOR_MPI_NORM "3.1" CACHE STRING "MPI norm version")
 
 #The Rpath Strikes Back
 set(CMAKE_SKIP_RPATH TRUE)
@@ -84,19 +84,19 @@ endif()
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
-if(CMAKE_C_COMPILER_ID MATCHES "(GNU|Intel|Clang)")
+if(CMAKE_C_COMPILER_ID MATCHES "(GCC|GNU|Intel|Clang|gcc|gnu|intel|clang)")
     add_compile_options(-fcommon)
 endif()
-if(CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+if(CMAKE_Fortran_COMPILER_ID MATCHES "(Intel|intel)")
     add_definitions(-DIFORT_CALL)
-elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "Flang")
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "(Flang|flang)")
     add_definitions(-DFLANG_CALL)
-elseif(CMAKE_Fortran_COMPILER_ID MATCHES "(PGI|NVHPC)")
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES "(PGI|NVHPC|pgi|nvhpc)")
     add_definitions(-DPGI_CALL)
-elseif(CMAKE_Fortran_COMPILER_ID MATCHES "(GNU|Fujitsu)")
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES "(GCC|GNU|Fujitsu|gcc|gnu|fujitsu)")
     add_definitions(-DGFORT_CALL)
 else()
-    message(FATAL_ERROR "Unsupported fortran compiler: ${CMAKE_Fortran_COMPILER}")
+    message(FATAL_ERROR "Unsupported Fortran compiler: ${CMAKE_Fortran_COMPILER}")
 endif()
 add_compile_options(-shared -fPIC)
 
@@ -131,20 +131,20 @@ set(THREADS_PREFER_PTHREAD_FLAG TRUE)
 find_package(Threads REQUIRED)
 find_program(BASHPATH bash NO_DEFAULT_PATH PATHS /bin /usr/bin /usr/local/bin)
 if(BASHPATH STREQUAL "BASHPATH-NOTFOUND")
-    message(FATAL_ERROR "Bash shell not found. It is required for running wi4mpi.")
+    message(FATAL_ERROR "Bash shell not found. It is required for running Wi4MPI.")
 endif()
 if(${CMAKE_VERSION} VERSION_LESS "3.17.0")
     if(NOT CMAKE_THREAD_LIBS_INIT)
-        message(FATAL_ERROR "Be sure to have Pthread available on your system")
+        message(FATAL_ERROR "Make sure to have Pthread available on your system")
     endif()
 else()
     if(NOT Threads_FOUND)
-        message(FATAL_ERROR "Be sure to have Pthread available on your system")
+        message(FATAL_ERROR "Make sure to have Pthread available on your system")
     endif()
 endif()
 
 if(WI4MPI_GENERATOR)
-  message(STATUS "Header and code generator is enabled.")
+  message(STATUS "Headers and code generation is enabled.")
   find_package(Python3 COMPONENTS Interpreter REQUIRED)
   set(PYTHONPATH "${CMAKE_SOURCE_DIR}/src/generator:$ENV{PYTHONPATH}")
   message(STATUS "Updated PYTHONPATH: ${PYTHONPATH}")
@@ -161,10 +161,10 @@ if(WI4MPI_GENERATOR)
   message(STATUS "--intelmpi_version=${WI4MPI_GENERATOR_INTELMPI_VERSION}")
   message(STATUS "--mpich_version=${WI4MPI_GENERATOR_MPICH_VERSION}")
   message(STATUS "--mpi_norm=${WI4MPI_GENERATOR_MPI_NORM}")
-  message(STATUS "Option: set WI4MPI_GENERATOR_OPENMPI_VERSION to an OpenMPI available version: 1.8.8 2.1.6 4.1.6 5.0.3")
-  message(STATUS "Option: set WI4MPI_GENERATOR_INTELMPI_VERSION to an IntelMPI available version: 20.0.0 24.0.0")
-  message(STATUS "Option: set WI4MPI_GENERATOR_MPICH_VERSION to an MPICH available version: 3.1.2 3.4.3 4.2.0")
-  message(STATUS "Option: set WI4MPI_GENERATOR_MPI_NORM to an available version: 1.0, 1.1, 1.2, 2.0, 2.1, 2.2, 3.0, 3.1, 4.0")
+  message(STATUS "Option: set WI4MPI_GENERATOR_OPENMPI_VERSION to a given Open MPI version (available versions: 1.8.8, 2.1.6, 4.1.6, 5.0.3)")
+  message(STATUS "Option: set WI4MPI_GENERATOR_INTELMPI_VERSION to a given Intel MPI version (available versions: 20.0.0, 24.0.0)")
+  message(STATUS "Option: set WI4MPI_GENERATOR_MPICH_VERSION to a given MPICH version (available versions: 3.1.2, 3.4.3, 4.2.0)")
+  message(STATUS "Option: set WI4MPI_GENERATOR_MPI_NORM to a given version (available versions: 1.0, 1.1, 1.2, 2.0, 2.1, 2.2, 3.0, 3.1, 4.0)")
   execute_process(
       COMMAND python3 ${CMAKE_SOURCE_DIR}/src/generator/generator.py
                 --interface_header_dir="${dir_gen_interface}"
@@ -185,7 +185,7 @@ if(WI4MPI_GENERATOR)
   endif()
   set(WI4MPI_GENDIR "${CMAKE_BINARY_DIR}/src")
 else()
-    message(STATUS "Header and code generator is disabled. Set WI4MPI_GENERATOR to ON to activate it.")
+    message(STATUS "Headers and code generation is disabled. Set WI4MPI_GENERATOR to ON to activate it.")
   set(WI4MPI_GENDIR "${CMAKE_SOURCE_DIR}/build/src")
   if (NOT "${CMAKE_SOURCE_DIR}/build" STREQUAL "${CMAKE_BINARY_DIR}")
     message(FATAL_ERROR "Building without using the generator is only supported in the build directory inside the source directory")
